[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Shaders/outline_shader.tres" type="Shader" id=1]
[ext_resource path="res://Assets/Sprites/apple_shadow.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Turret_Animation_Manager.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Turret.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/turret_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/Themes/health_bar.tres" type="Theme" id=6]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/width = 1.0
shader_param/outline_color = Color( 1, 0.2, 0.2, 1 )

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 11.0

[sub_resource type="CircleShape2D" id=4]
radius = 227.0

[sub_resource type="CircleShape2D" id=5]
radius = 155.0

[sub_resource type="Animation" id=11]
resource_name = "Attack_Down"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 30 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "basic_attack1"
}, {
"args": [  ],
"method": "basic_attack2"
}, {
"args": [  ],
"method": "basic_attack1"
}, {
"args": [  ],
"method": "basic_attack2"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "Attack_Left"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 20 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "basic_attack1"
}, {
"args": [  ],
"method": "basic_attack2"
}, {
"args": [  ],
"method": "basic_attack1"
}, {
"args": [  ],
"method": "basic_attack2"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "Attack_Right"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 40 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "basic_attack1"
}, {
"args": [  ],
"method": "basic_attack2"
}, {
"args": [  ],
"method": "basic_attack1"
}, {
"args": [  ],
"method": "basic_attack2"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "Attack_Up"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 40, 40 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "basic_attack1"
}, {
"args": [  ],
"method": "basic_attack2"
}, {
"args": [  ],
"method": "basic_attack1"
}, {
"args": [  ],
"method": "basic_attack2"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 1.2
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}

[node name="Turret" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 5 )
hframes = 10
vframes = 5
frame = 20

[node name="Shadow" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( -1, 10.5 )
scale = Vector2( 0.6, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Body_Area" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body_Area"]
visible = false
shape = SubResource( 3 )

[node name="Aggro_Area" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro_Area"]
visible = false
shape = SubResource( 4 )

[node name="Attack_Range" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range"]
shape = SubResource( 5 )

[node name="Bars" type="Node2D" parent="."]
z_index = 2

[node name="HP_Bar" type="ProgressBar" parent="Bars"]
margin_left = -7.0
margin_top = -21.0
margin_right = 7.0
margin_bottom = -18.0
theme = ExtResource( 6 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack_Down = SubResource( 11 )
anims/Attack_Left = SubResource( 12 )
anims/Attack_Right = SubResource( 13 )
anims/Attack_Up = SubResource( 14 )
anims/Idle = SubResource( 8 )
anims/RESET = SubResource( 10 )
script = ExtResource( 3 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
volume_db = -7.0

[node name="SFX2" type="AudioStreamPlayer" parent="."]
volume_db = -7.0

[node name="Bullet_Positions" type="Node2D" parent="."]
visible = false

[node name="Bullet_Position_Left1" type="Position2D" parent="Bullet_Positions"]
position = Vector2( -17.5, 1.5 )

[node name="Bullet_Position_Left2" type="Position2D" parent="Bullet_Positions"]
position = Vector2( -14.5, 3.5 )

[node name="Bullet_Position_Up1" type="Position2D" parent="Bullet_Positions"]
position = Vector2( -4.5, -6 )

[node name="Bullet_Position_Up2" type="Position2D" parent="Bullet_Positions"]
position = Vector2( 2.5, -6 )

[node name="Bullet_Position_Right1" type="Position2D" parent="Bullet_Positions"]
position = Vector2( 16.5, 1.5 )

[node name="Bullet_Position_Right2" type="Position2D" parent="Bullet_Positions"]
position = Vector2( 13.5, 3.5 )

[node name="Bullet_Position_Down1" type="Position2D" parent="Bullet_Positions"]
position = Vector2( -4.5, 4.5 )

[node name="Bullet_Position_Down2" type="Position2D" parent="Bullet_Positions"]
position = Vector2( 2.5, 4.5 )

[connection signal="body_entered" from="Aggro_Area" to="." method="_on_Aggro_Area_body_entered"]
[connection signal="body_exited" from="Aggro_Area" to="." method="_on_Aggro_Area_body_exited"]
